# llm-judge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: agent-prompt.md  api-guide.md  cli-reference.md  examples.md  installation.md  operations.md  profiles.md  quickstart.md  user-guide.md
examples/: baseline_reference_generation.jsonl  chunkshop_e1e8.jsonl  llm_config.sample.yaml  local_two_judges.yaml  local_vllm_no_key.yaml  longbench_eval.jsonl  rag_eval.jsonl  ragas_eval.jsonl  three_judges.yaml
llm_judge/: __init__.py  cli.py  config.py  engine.py  io.py  models.py  providers.py  report.py  scorers.py
skills/llm-judge/: SKILL.md
tests/: test_quick_score.py
tools/: summarize-output.py
